--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lint-fix": "next lint --fix"
   },
   "dependencies": {
+    "@excalidraw/excalidraw": "^0.18.0",
     "@opennextjs/cloudflare": "^1.13.0",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.11",
